// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bag page View should not render SFL section 1`] = `
<div
  className="test"
>
  <div
    className=""
  >
    <Styled(Row)
      tagName="header"
    >
      <Styled(Col)
        className="left-sec"
        colSize={
          Object {
            "large": 6,
            "medium": 4,
            "small": 3,
          }
        }
        onClick={[Function]}
      >
        <Styled(Heading)
          className="bag-header activeHeader"
          color="text.primary"
          component={null}
          dataLocator=""
          fontSize="fs16"
          textAlign="left"
          variant="h6"
        >
          undefined (10)
        </Styled(Heading)>
        <Styled(BodyCopy)
          className="estimatedHeaderText activeEstimatedHeader"
          color="text.primary"
          component="p"
          fontFamily="secondary"
          fontSize="fs10"
          fontWeight="regular"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          textAlign="left"
        >
          undefined: undefined50.00
        </Styled(BodyCopy)>
      </Styled(Col)>
    </Styled(Row)>
  </div>
  <Styled(CnCTemplate)
    bagActions={[Function]}
    isNonEmptySFL={false}
    isNotLoaded={true}
    leftSection={[Function]}
    showAccordian={false}
    showLeftSection={true}
  />
  <Connect(QuickViewModalContainer)
    fromBagPage={true}
  />
</div>
`;

exports[`Bag page View should render Added to Bag view section 1`] = `
<div
  className="test"
>
  <div
    className=""
  >
    <Styled(Row)
      tagName="header"
    >
      <Styled(Col)
        className="left-sec"
        colSize={
          Object {
            "large": 6,
            "medium": 4,
            "small": 3,
          }
        }
        onClick={[Function]}
      >
        <Styled(Heading)
          className="bag-header activeHeader"
          color="text.primary"
          component={null}
          dataLocator=""
          fontSize="fs16"
          textAlign="left"
          variant="h6"
        >
          undefined (10)
        </Styled(Heading)>
        <Styled(BodyCopy)
          className="estimatedHeaderText activeEstimatedHeader"
          color="text.primary"
          component="p"
          fontFamily="secondary"
          fontSize="fs10"
          fontWeight="regular"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          textAlign="left"
        >
          undefined: undefined50.00
        </Styled(BodyCopy)>
      </Styled(Col)>
    </Styled(Row)>
  </div>
  <Styled(CnCTemplate)
    bagActions={[Function]}
    isNonEmptySFL={false}
    isNotLoaded={true}
    leftSection={[Function]}
    showAccordian={false}
    showLeftSection={true}
  />
  <Connect(QuickViewModalContainer)
    fromBagPage={true}
  />
</div>
`;

exports[`Bag page View should render SFL section 1`] = `
<div
  className="test"
>
  <div
    className=""
  >
    <Styled(Row)
      tagName="header"
    >
      <Styled(Col)
        className="left-sec"
        colSize={
          Object {
            "large": 6,
            "medium": 4,
            "small": 3,
          }
        }
        onClick={[Function]}
      >
        <Styled(Heading)
          className="bag-header activeHeader"
          color="text.primary"
          component={null}
          dataLocator=""
          fontSize="fs16"
          textAlign="left"
          variant="h6"
        >
          undefined (10)
        </Styled(Heading)>
        <Styled(BodyCopy)
          className="estimatedHeaderText activeEstimatedHeader"
          color="text.primary"
          component="p"
          fontFamily="secondary"
          fontSize="fs10"
          fontWeight="regular"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          textAlign="left"
        >
          undefined: undefined50.00
        </Styled(BodyCopy)>
      </Styled(Col)>
    </Styled(Row)>
  </div>
  <Styled(CnCTemplate)
    bagActions={[Function]}
    isNonEmptySFL={true}
    isNotLoaded={true}
    leftSection={[Function]}
    showAccordian={false}
    showLeftSection={true}
  />
  <Connect(QuickViewModalContainer)
    fromBagPage={true}
  />
</div>
`;
